--- a/.env
+++ b/.env
@@ -3,3 +3,5 @@ REGEN_PEPPER=default-pepper-secret-change-me
 FIREBASE_SERVICE_ACCOUNT_KEY={}
 NEXT_PUBLIC_GOOGLE_MAPS_API_KEY=
 GEMINI_API_KEY=AIzaSyDvrLi5dQlJsOOAx_ySt6ZdeTP7GbX9Hk4
+GITCOIN_API_KEY=
+GITCOIN_SCORER_ID=
