--- a/package.json
+++ b/package.json
@@ -36,13 +36,13 @@
     "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-toast": "^1.2.6",
     "@radix-ui/react-tooltip": "^1.1.8",
+    "@rainbow-me/rainbowkit": "^1.3.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
     "dotenv": "^16.5.0",
     "embla-carousel-react": "^8.6.0",
-    "ethers": "^6.13.1",
     "firebase": "^11.9.1",
     "fuse.js": "^7.0.0",
     "genkit": "^1.20.0",
@@ -57,6 +57,8 @@
     "slugify": "^1.6.6",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
+    "viem": "^1.21.4",
+    "wagmi": "^1.4.13",
     "zod": "^3.24.2"
   },
   "devDependencies": {
